--- a/templates/edit.html
+++ b/templates/edit.html
@@ -5,21 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
-    <title>Edit</title>
+    <title>Изменение информации</title>
 </head>
 <body>
-    <div class="content-block">
-        <legend>Input data</legend>
-        <form action="/edit/{{user.doc_id}}" method="post" class="mb-3">
-          <label for="exampleFormControlInput1" class="form-label">Name</label>
-          <input name="name" type="text" class="form-control" id="exampleFormControlInput1" value="{{user['name']}}" required/>
-          <label for="exampleFormControlInput1" class="form-label">Age</label>
-          <input name="age" type="text" class="form-control" id="exampleFormControlInput1" value="{{user['age']}}" required/>
-          <label for="exampleFormControlInput1" class="form-label">Height</label>
-          <input name="height" type="text" class="form-control" id="exampleFormControlInput1" value="{{user['height']}}" required/>
+    <div class="edit-block">
+        <legend>Введите информацию</legend>
+        <form action="/edit/{{item.doc_id}}" method="post" class="mb-3">
+        {% for msg in get_flashed_messages() %}
+            <div class="alert alert-danger" role="alert">
+              {{msg}}
+            </div>
+        {% endfor %}
+          <label for="exampleFormControlInput1" class="form-label">Кабинет</label>
+          <input name="class" type="text" class="form-control" id="exampleFormControlInput1" value="{{item['class']}}" required/>
+          <label for="exampleFormControlInput1" class="form-label">Дата</label>
+          <input name="date" type="date" class="form-control" id="exampleFormControlInput1" value="{{item['date']}}" required/>
+          <label for="exampleFormControlInput1" class="form-label">Время начала</label>
+          <input name="tstart" type="time" class="form-control" id="exampleFormControlInput1" value="{{item['tstart']}}" required/>
+          <label for="exampleFormControlInput1" class="form-label">Время конца</label>
+          <input name="tend" type="time" class="form-control" id="exampleFormControlInput1" value="{{item['tend']}}" required/>
+          <label for="exampleFormControlInput1" class="form-label">Тема</label>
+          <input name="topic" type="text" class="form-control" id="exampleFormControlInput1" value="{{item['topic']}}" required/>
+          <label for="exampleFormControlInput1" class="form-label">Преподаватель</label>
+          <input name="teacher" type="text" class="form-control" id="exampleFormControlInput1" value="{{item['teacher']}}" required/>
           <input type="submit" class="btn btn-primary edit-btns" value="Submit"/>
-        </div>
-
+        </form>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
