--- a/templates/index.html
+++ b/templates/index.html
@@ -5,36 +5,66 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
-    <title>Users</title>
+    <title>Записи</title>
 </head>
 <body>
     <div class="content-block">
-        <legend>Users</legend>
-        {% for user in db %}
+        <legend class="header">Записи</legend>
         <div class="accordion" id="accordionPanelsStayOpenExample">
+        {% for item in db %}
           <div class="accordion-item">
-            <h2 class="accordion-header" id="panelsStayOpen-heading{{user.doc_id}}">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapse{{user.doc_id}}" aria-expanded="true" aria-controls="panelsStayOpen-collapse{{user.doc_id}}">
-                {{user.name}}
+            <h2 class="accordion-header" id="panelsStayOpen-heading{{item.doc_id}}">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapse{{item.doc_id}}" aria-expanded="true" aria-controls="panelsStayOpen-collapse{{item.doc_id}}">
+                <div class="h-item">
+                    <span>Кабинет: {{item.class}}</span>
+                    <span class="date-item">{{item.date}} | {{item.tstart}}-{{item.tend}}</span>
+                </div>
               </button>
             </h2>
-            <div id="panelsStayOpen-collapse{{user.doc_id}}" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-heading{{user.doc_id}}">
+            <div id="panelsStayOpen-collapse{{item.doc_id}}" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-heading{{item.doc_id}}">
               <div class="accordion-body">
-                <legend class="info">Info</legend>
-                <p>Name: {{user.name}}</p>
-                <p>Age: {{user.age}}</p>
-                <p>Height: {{user.height}}</p>
+                <legend class="info">Информация</legend>
+                <p>Кабинет: {{item.class}}</p>
+                <p>Дата: {{item.date}}</p>
+                <p>Время: {{item.tstart}}-{{item.tend}}</p>
+                <p>Тема: {{item.topic}}</p>
+                <p>Преподаватель: {{item.teacher}}</p>
                 <div class="edit-btns">
-                    <a href="edit/{{user.doc_id}}" class="card-link card-edit">Edit</a>
-                    <a href="delete/{{user.doc_id}}" class="card-link">Delete</a>
+                    <a href="edit/{{item.doc_id}}" class="card-link card-edit">Изменить</a>
+                    <a href="delete/{{item.doc_id}}" class="card-link">Удалить</a>
                 </div>
               </div>
             </div>
           </div>
-        </div>
+        {% else %}
+            <p>Записей нет</p>
         {% endfor %}
         <div class="card-create">
-            <a href="create" class="card-link">Create</a>
+            <a href="create" class="card-link">Создать</a>
+        </div>
+        </div>
+
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Фильтры</h5>
+            <form action="/" method="post" class="mb-3">
+              <div class="mb-3">
+                {% for msg in get_flashed_messages() %}
+                    <div class="alert alert-danger" role="alert">
+                      {{msg}}
+                    </div>
+                {% endfor %}
+                  <label for="formGroupExampleInput" class="form-label">От</label>
+                  <input name="dstart" type="date" class="form-control" id="formGroupExampleInput" value="{{dstart}}" required>
+                </div>
+                <div class="mb-3">
+                  <label for="formGroupExampleInput2" class="form-label">До</label>
+                  <input name="dend" type="date" class="form-control" id="formGroupExampleInput2" value="{{dend}}" required>
+                </div>
+                <input type="submit" class="btn btn-primary edit-btns" value="Принять"/>
+                <input name="clear" type="submit" class="btn btn-light edit-btns" value="Очистить"/>
+            </form>
+          </div>
         </div>
     </div>
 
